--- a/templates/trashorclean.html
+++ b/templates/trashorclean.html
@@ -3,7 +3,11 @@
 <body>
 {% csrf_token %}
 
-<pre>{{ d }}</pre>
+<div>
+        {% for message in messages %}
+        <h3> {{message}} </h3>
+        {% endfor %}
+ </div>
 
 </body>
 </html>
