--- a/templates/emotionanalysis.html
+++ b/templates/emotionanalysis.html
@@ -109,7 +109,7 @@ html,body{
 }
    </style>
    <body>
-  <form action="trashdetection" method="post" enctype="multipart/form-data">
+  <form action="emotionanalysis" method="post" enctype="multipart/form-data">
    {% csrf_token %} 
   
       <div class="container">
