--- a/templates/emotion.html
+++ b/templates/emotion.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-{% csrf_token %}
 
+
+ <form action="contact" method="post">
+ {% csrf_token %}    
+ <h1>Predict</h1>
+<button type="submit" class="registerbtn">Submit</button>
 <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
