--- a/templates/emotion.html
+++ b/templates/emotion.html
@@ -3,7 +3,7 @@
 <body>
 
 
- <form action="contact" method="post">
+ <form action="predict" method="post">
  {% csrf_token %}    
  <h1>Predict</h1>
 <button type="submit" class="registerbtn">Submit</button>
