--- a/templates/emotion.html
+++ b/templates/emotion.html
@@ -6,7 +6,7 @@
  <form action="predict" method="post">
  {% csrf_token %}    
  <h1>Predict</h1>
-<button type="submit" class="registerbtn">Submit</button>
+<!--<button type="submit" class="registerbtn">Submit</button> !--> 
 <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
