--- a/templates/contact.html
+++ b/templates/contact.html
@@ -69,7 +69,7 @@ a {
 </head>
 <body>
 
- <form action="contact" method="post">
+ <form action="analyse" method="post">
      {% csrf_token %} 
    <div class="container">
         <h1>Contact</h1>
@@ -79,13 +79,6 @@ a {
         <label for="Email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" required>
 
-        <label for="Username"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="username" required>
-
-
-
-        <label for="Message"><b>Message</b></label>
-        <input type="text" placeholder="Enter your queries or suggestions here" name="message" required>
 
 
 
