--- a/templates/emailverification.html
+++ b/templates/emailverification.html
@@ -69,7 +69,7 @@ a {
 </head>
 <body>
 
- <form action="analyse" method="post">
+ <form action="verify" method="post">
      {% csrf_token %} 
    <div class="container">
         <h1>Contact</h1>
