--- a/templates/emailverification.html
+++ b/templates/emailverification.html
@@ -72,7 +72,7 @@ a {
  <form action="verify" method="post">
      {% csrf_token %} 
    <div class="container">
-        <h1>Contact</h1>
+        <h1>Verify</h1>
 
         <hr>
 
