--- a/templates/emailverification.html
+++ b/templates/emailverification.html
@@ -19,7 +19,7 @@ body {
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text]{
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -28,7 +28,7 @@ input[type=text], input[type=password] {
   background: #f1f1f1;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus{
   background-color: #ddd;
   outline: none;
 }
